[project]
name = "tinyurl"
version = "0.1.0"
description = "URL Shortener"
authors = [
    {name = "Sepehr Bazyar",email = "sepehr.bazyar@karnameh.ir"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
